--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
+NODE_ENV = development
 PORT = 3000
 DATABASE_URL=mongodb+srv://admin_new:hSbW9NH78AvqSumF@cluster0.5wr47xq.mongodb.net/ph_university_management?retryWrites=true&w=majority&appName=Cluster0
 DEFAULT_PASS = phuniversity!@#
